# Growth.ai

./: .gitignore  EXPLANATION.md  INSTRUCTIONS.md  README.md  process_kaggle_data.py  pyproject.toml  seed_db.py
docs/: Architecture.md  DataFlow.md  Database.md  PRD.md  SRS.md
src/growth_ai/: __init__.py  config.py
src/growth_ai/application/: __init__.py  cleaning.py  metrics.py  ports.py  reporting.py
src/growth_ai/domain/: __init__.py  models.py
src/growth_ai/infrastructure/: __init__.py  database.py  repositories.py
src/growth_ai/presentation/: __init__.py  streamlit_app.py  ui_components.py
tests/: test_cleaning.py  test_metrics.py  test_reporting.py
