[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "growth-ai"
version = "0.1.0"
description = "User behavior analytics and subscription conversion dashboard"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "numpy>=2.1",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "reportlab>=4.2",
  "SQLAlchemy>=2.0",
  "streamlit>=1.37",
  "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
